<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFCC99"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_view_container2"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/empty_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:background="@drawable/bluesquare" />

            <Button
                android:id="@+id/empty_button2"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:background="@drawable/whitesquare" />

            <Button
                android:id="@+id/empty_button3"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:background="@drawable/bluesquare" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/empty_button4"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:background="@drawable/whitesquare" />

            <Button
                android:id="@+id/empty_button5"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:background="@drawable/bluesquare" />

            <Button
                android:id="@+id/empty_button6"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:background="@drawable/whitesquare" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/empty_button7"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:background="@drawable/bluesquare" />

            <Button
                android:id="@+id/empty_button8"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:background="@drawable/whitesquare"/>

            <Button
                android:id="@+id/empty_button9"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:background="@drawable/bluesquare" />
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/image_view_container2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <ImageView
            android:id="@+id/start_the_game"
            android:contentDescription="@string/game_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/bsstartthematch" />

        <ImageView
            android:id="@+id/your_turn"
            android:contentDescription="@string/user_turn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/bsyourturn"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/player_one"
            android:contentDescription="@string/player_one_turn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/bsplayer1"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/player_two"
            android:contentDescription="@string/player_two_turn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/bsplayer2"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/player_one_wins"
            android:contentDescription="@string/player_one_winner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/bsplayer1winner"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/player_two_wins"
            android:contentDescription="@string/player_two_winner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/bsplayer2winner"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/comp_turn"
            android:contentDescription="@string/computer_turn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/bscomputersturn"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/you_win"
            android:contentDescription="@string/you_winner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/bsyouwin"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/computer_wins"
            android:contentDescription="@string/computer_winner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/bscomputerwins"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/its_draw"
            android:contentDescription="@string/its_a_draw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:src="@drawable/bsdraw"
            android:visibility="invisible" />

    </RelativeLayout>

</RelativeLayout>
