<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFCC99">

    <Button
        android:id="@+id/empty_button"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="75dp"
        android:layout_marginStart="75dp"
        android:background="@drawable/bluesquare" />


    <Button
        android:id="@+id/empty_button2"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="150dp"
        android:layout_marginStart="150dp"
        android:background="@drawable/whitesquare"/>

    <Button
        android:id="@+id/empty_button3"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="225dp"
        android:layout_marginStart="225dp"
        android:background="@drawable/bluesquare" />

    <Button
        android:id="@+id/empty_button4"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="275dp"
        android:layout_marginLeft="75dp"
        android:layout_marginStart="75dp"
        android:background="@drawable/whitesquare" />

    <Button
        android:id="@+id/empty_button5"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="275dp"
        android:layout_marginLeft="150dp"
        android:layout_marginStart="150dp"
        android:background="@drawable/bluesquare" />

    <Button
        android:id="@+id/empty_button6"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="275dp"
        android:layout_marginLeft="225dp"
        android:layout_marginStart="225dp"
        android:background="@drawable/whitesquare" />

    <Button
        android:id="@+id/empty_button7"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="350dp"
        android:layout_marginLeft="75dp"
        android:layout_marginStart="75dp"
        android:background="@drawable/bluesquare" />

    <Button
        android:id="@+id/empty_button8"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="350dp"
        android:layout_marginLeft="150dp"
        android:layout_marginStart="150dp"
        android:background="@drawable/whitesquare" />

    <Button
        android:id="@+id/empty_button9"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="350dp"
        android:layout_marginLeft="225dp"
        android:layout_marginStart="225dp"
        android:background="@drawable/bluesquare" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/start_the_game"
            android:contentDescription="@string/game_start"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:src="@drawable/bsstartthematch" />

        <ImageView
            android:id="@+id/player_one"
            android:contentDescription="@string/player_one_turn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/bsplayer1"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/player_two"
            android:contentDescription="@string/player_two_turn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/bsplayer2"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/player_one_wins"
            android:contentDescription="@string/player_one_winner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/bsplayer1winner"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/player_two_wins"
            android:contentDescription="@string/player_two_winner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:src="@drawable/bsplayer2winner"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/its_draw"
            android:contentDescription="@string/its_a_draw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:src="@drawable/bsdraw"
            android:visibility="invisible" />

    </RelativeLayout>

</RelativeLayout>
