<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black">

    <Button
        android:id="@+id/empty_button"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginLeft="78dp"
        android:layout_marginStart="78dp"
        android:layout_marginTop="310dp"
        android:background="@drawable/custom_empty_button" />


    <Button
        android:id="@+id/empty_button2"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginLeft="163dp"
        android:layout_marginStart="163dp"
        android:layout_marginTop="310dp"
        android:background="@drawable/custom_empty_button2" />

    <Button
        android:id="@+id/empty_button3"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginLeft="248dp"
        android:layout_marginStart="248dp"
        android:layout_marginTop="310dp"
        android:background="@drawable/custom_empty_button" />

    <Button
        android:id="@+id/empty_button4"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginLeft="78dp"
        android:layout_marginStart="78dp"
        android:layout_marginTop="395dp"
        android:background="@drawable/custom_empty_button2" />

    <Button
        android:id="@+id/empty_button5"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginLeft="163dp"
        android:layout_marginStart="163dp"
        android:layout_marginTop="395dp"
        android:background="@drawable/custom_empty_button" />

    <Button
        android:id="@+id/empty_button6"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginLeft="248dp"
        android:layout_marginStart="248dp"
        android:layout_marginTop="395dp"
        android:background="@drawable/custom_empty_button2" />

    <Button
        android:id="@+id/empty_button7"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginLeft="78dp"
        android:layout_marginStart="78dp"
        android:layout_marginTop="480dp"
        android:background="@drawable/custom_empty_button" />

    <Button
        android:id="@+id/empty_button8"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginLeft="163dp"
        android:layout_marginStart="163dp"
        android:layout_marginTop="480dp"
        android:background="@drawable/custom_empty_button2" />

    <Button
        android:id="@+id/empty_button9"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginLeft="248dp"
        android:layout_marginStart="248dp"
        android:layout_marginTop="480dp"
        android:background="@drawable/custom_empty_button" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/start_the_game"
            android:contentDescription="@string/game_start"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:src="@drawable/startthematch" />

        <ImageView
            android:id="@+id/player_one"
            android:contentDescription="@string/player_one_turn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/player1"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/player_two"
            android:contentDescription="@string/player_two_turn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/player2"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/player_one_wins"
            android:contentDescription="@string/player_one_winner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/player1winner"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/player_two_wins"
            android:contentDescription="@string/player_two_winner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/player2winner"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/its_draw"
            android:contentDescription="@string/its_a_draw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:src="@drawable/draw"
            android:visibility="invisible" />

    </RelativeLayout>

</RelativeLayout>
